--- a/agroghala-final/src/index.css
+++ b/agroghala-final/src/index.css
@@ -3,7 +3,12 @@
 @tailwind utilities;
 
 body {
-    padding: 5rem;
+    padding-top: 5rem;
+}
+.home {
+    border-radius: 0;
+    width: 100%;
+    height: 400px;
 }
 .card {
     width: 425px;
@@ -19,14 +24,66 @@ body {
 .card a {
     cursor: pointer;
 }
+.navbar-sty {
+    background-color: black;
+}
+nav h3 {
+    margin-left: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    color: rgba(0, 128, 0, 0.75);
+}
+.hero-image {
+    border-radius: 0%;
+    width: 100%;
+    align-items: flex-end;
+}
+
+.hero-image div {
+    border-radius: 0%;
+    text-align: center;
+    background: linear-gradient(to left, rgba(0, 0, 0, 3),rgba(0, 0, 0, 0));
+}
+
+nav {
+    background-color: #ffffff;
+    filter: drop-shadow(7px 1px 5px rgb(63, 62, 62));
+    padding: 1rem;
+    position:fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+}
+nav ul {
+    display: flex;
+}
+nav li {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+nav li:hover {
+    color: white;
+    background-color: rgba(0, 128, 0, 0.75);
+    border-radius: 10px;
+
+}
 
 .card button {
    /* background-color: rgba(0, 128, 0, 0.75);;*/
     width: 100%;
 }
+textarea:focus {
+    box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
+  }
 input[type="text"]:focus {
     box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
   }
+ 
 
   input[type="email"]:focus {
     box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
@@ -41,9 +98,23 @@ input[type="text"]:focus {
         justify-content: start;
     }
     body {
-        padding: 0rem;
-        padding-top: 5rem;
-        padding-bottom: 5rem;
+        padding: auto;
+    }
+    footer {
+        
     }
     
+  }
+  .expanded {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    display: flex;
+  }
+  .ghala p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
   }
