--- a/agroghala-final/src/index.css
+++ b/agroghala-final/src/index.css
@@ -3,12 +3,16 @@
 @tailwind utilities;
 
 body {
-    padding-top: 5rem;
+    padding-top: 1rem;
 }
 .home {
     border-radius: 0;
     width: 100%;
-    height: 400px;
+}
+.homepage {
+    margin-top: 0px;
+    height: 600px;
+    overflow: hidden;
 }
 .card {
     width: 425px;
@@ -24,9 +28,7 @@ body {
 .card a {
     cursor: pointer;
 }
-.navbar-sty {
-    background-color: black;
-}
+
 nav h3 {
     margin-left: 2rem;
     padding-top: 0.5rem;
@@ -47,8 +49,7 @@ nav h3 {
 
 nav {
     background-color: #ffffff;
-    filter: drop-shadow(7px 1px 5px rgb(63, 62, 62));
-    padding: 1rem;
+    padding-top: 1rem;
     position:fixed;
     top: 0;
     left: 0;
@@ -63,14 +64,13 @@ nav li {
     padding-right: 1.5rem;
     padding-left: 1.5rem;
     padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 1rem;
 }
 
 nav li:hover {
-    color: white;
-    background-color: rgba(0, 128, 0, 0.75);
-    border-radius: 10px;
-
+    color: rgba(0, 128, 0, 0.75);
+    border-bottom: 3px solid #008000;
+    border-radius: 0px;
 }
 
 .card button {
@@ -91,6 +91,9 @@ input[type="text"]:focus {
   input[type="password"]:focus {
     box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
   }
+  .navbar-style {
+
+  }
 
   @media (max-width: 768px) {
     .contain {
@@ -100,10 +103,19 @@ input[type="text"]:focus {
     body {
         padding: auto;
     }
-    footer {
-        
+    .phone {
+        display: block;
+        margin-bottom: 1rem;
     }
-    
+    .navbar-style {
+        display: none;
+        margin-bottom: 1rem;
+    }
+    .menu-icon {
+        display: flex;
+        justify-content: end;
+        padding: 0.5rem;
+    }
   }
   .expanded {
     position: fixed;
@@ -118,3 +130,28 @@ input[type="text"]:focus {
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
   }
+  .ghala {
+    transition: transform 0.3s, background-color 0.3s;
+  }
+
+  .ghala:hover {
+    transform: scale(1.02); /* Increase the scale value to zoom in more */
+  }
+  .menu-icon {
+    display: none;
+  }
+
+  .footer {
+    border-top-left-radius: 50% 100px;
+    border-top-right-radius: 50% 100px;
+  }
+ .classical {
+    width: 1000px;
+    height: auto;
+ }
+.home-buttons {
+    width: 10rem;
+}
+.rent-buttons {
+    width: 6rem;
+}
