--- a/agroghala-final/src/index.css
+++ b/agroghala-final/src/index.css
@@ -158,3 +158,22 @@ input[type="text"]:focus {
 .renting {
     border-radius: 0;
 }
+.scrollable-content {
+    max-height: 300px; /* Set the maximum height for the scrollable content */
+    overflow-y: auto; /* Enable vertical scrollbar when content overflows */
+    /* Styles for the scrollbar track */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  /* Styles for the scrollbar thumb (the draggable part) */
+  ::-webkit-scrollbar-thumb {
+    background-color: #008000;
+    border-radius: 4px;
+  }
+
+  /* Styles for the scrollbar thumb when hovered */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  }
