--- a/agroghala-final/src/index.css
+++ b/agroghala-final/src/index.css
@@ -78,21 +78,63 @@ nav li:hover {
     width: 100%;
 }
 textarea:focus {
-    box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
+  outline: none;
+  box-shadow: 0 0 0 1px #0d9a1b; 
   }
 input[type="text"]:focus {
-    box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
+  outline: none;
+  box-shadow: 0 0 0 1px #0d9a1b; ;
   }
  
 
   input[type="email"]:focus {
-    box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
+    outline: none;
+  box-shadow: 0 0 0 1px #0d9a1b; 
   }
   input[type="password"]:focus {
-    box-shadow: 0 0 5px 2px rgba(0, 128, 0, 0.75);
+    outline: none;
+  box-shadow: 0 0 0 1px #0d9a1b; 
   }
   .navbar-style {
 
+  }
+  /* Customize the scrollbar track */
+  textarea::-webkit-scrollbar {
+    width: 10px; /* Set scrollbar width */
+  }
+
+  textarea::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Set the background color of the scrollbar track */
+  }
+
+  /* Customize the scrollbar handle (thumb) */
+  textarea::-webkit-scrollbar-thumb {
+    background-color: #008000; /* Set the color of the scrollbar handle */
+    border-radius: 4px; /* Add border radius to make it rounded */
+  }
+
+  /* Customize the scrollbar handle when hovering over it */
+  textarea::-webkit-scrollbar-thumb:hover {
+    background-color: #008000; /* Set the color of the scrollbar handle on hover */
+  }
+  /* Customize the scrollbar track */
+  body::-webkit-scrollbar {
+    width: 8px; /* Set scrollbar width */
+  }
+
+  body::-webkit-scrollbar-track {
+    background-color: transparent; /* Set the background color of the scrollbar track */
+  }
+
+  /* Customize the scrollbar handle (thumb) */
+  body::-webkit-scrollbar-thumb {
+    background-color: #008000; /* Set the color of the scrollbar handle */
+    border-radius: 4px; /* Add border radius to make it rounded */
+  }
+
+  /* Customize the scrollbar handle when hovering over it */
+  body::-webkit-scrollbar-thumb:hover {
+    background-color: #008000; /* Set the color of the scrollbar handle on hover */
   }
 
   @media (max-width: 768px) {
@@ -176,4 +218,8 @@ input[type="text"]:focus {
   ::-webkit-scrollbar-thumb:hover {
     background-color: #555;
   }
+  }
+
+  .popup {
+    width: 600px;
   }
